@@ -5,6 +5,9 @@ changelog: https://github.com/wesnoth/wesnoth/blob/master/changelog
 Version 1.13.10+dev:
  * Language and i18n:
    * Updated translations: Chinese (Simplified).
+ * Performance:
+   * GUI2 windows no longer redraw everything 50 times per second. This reduces
+     CPU usage in fullscreen windows such as MP lobby by about 85 %.
  * Miscellaneous and bug fixes:
    * Fixed ingame help showing units you haven't encountered (bug #2135)
 
